feat: optimize app performance and stability